@@ -9,23 +9,23 @@ DIST stunnel-5.14.tar.gz 608366 SHA256 2197b4fc1db82eba69c8baf1fac30f0767af26e9f
 DIST stunnel-5.16.tar.gz 613813 SHA256 b6b7e93fb2626eaabae1c8474e1dfa23962cfde8fa35c8602289fcaa4f53608d SHA512 8e3182d0a8103c713d4dae7913e617f10102d69ded9b17abb4b5c937b8fb6f436440b5bbae0a33fd1728205109e1e37bfa4f28f8f2873fbbe2fb214b563b3a4d WHIRLPOOL e3552994c958d53cbb1bb4b9b67fb3423c142509b01a34f00994ba9ba35a040ce0cb0f68a289937a98d6c14bead205d215639304807bbc276f5017b5667a9c58
 EBUILD stunnel-5.08.ebuild 2532 SHA256 c58e9ce1b6fdefb6b1b5df28aba676cbcb6de62a88a22c0c4f6a9b8a9251c30f SHA512 d112614325e87a83f9a478c7138f228811d11ca54accbd17100bd56e230eeb93a71f0653720b335ae6b4b73bbd98de4dc58b8569f000fce426f094b7f685495a WHIRLPOOL d4006021927ff2fd48aa0d02d7e3021d9a6b69335156691156935ba7ddd6fc744848389c2ecb2054c4250cabd65e03f49cac1804153929a1b67a551d0ff380f2
 EBUILD stunnel-5.14.ebuild 2626 SHA256 8cb2f88fada82226886e75ed19223000f5b4c91923179c366e94d0f6d276841d SHA512 1da4f57e250f7e7732644451a94cf3b8a46b9b238e760063e3ffbc793b5728398bed3163b21bcfa4c8739cf1a31c590dd030689308ace3a5bd08840f527de853 WHIRLPOOL 5fdecda9a5ed24d143718c59569a2460abd9f3827ea746b68f693488266cc03da7a2d676fa765642e51286b1b6d7c54c6c74e2f42bbf232e0128f6c3de0abdbc
-EBUILD stunnel-5.16-r1.ebuild 2741 SHA256 0a1ba3bbcd83f753f931e319add0bc5dd794755660b45f502cdfa14bd500a016 SHA512 e736c3d37471ba1dbd6ef1e29ed30f1803468c26793f45ad28aeead5a95c6101ce4d8209488d915ae5dc5fcf402a02751a875f61084f078bd2000dd51e116b25 WHIRLPOOL 873d65cc249c2b9af6b05d1e98e3c80ec6a69aaeafdb5b702a98e6c33c7a40a1911b3fe7457dec61b3cc8d0a9cdf6c7b5280ed4df24018f9cd16e7f4c13c9b41
-MISC ChangeLog 31623 SHA256 c61545c3b080098e3e5aadb81a872e046bf1aa032beaaf3fc75837bc32c402bc SHA512 a192c5b53e726f44682bdcef8ed9edc39d3f1b106c37fd422caada8e6679077d0612a7232b4a629797bf6075639c80a5f9d002dacfc0de9478a3c47ed4991697 WHIRLPOOL b3bc8a8266e5e532881d24080d42023e6cb46277c1dfdafb35d392a54821596898ca74d37ca34082edac0809967c4f8f509f064a6b99a3f1ee285447f526a793
+EBUILD stunnel-5.16-r1.ebuild 2800 SHA256 4119bfdf8e98c52290e5ed939f0c296558313b6dc2509b7cb0da17cd6b5ac171 SHA512 deebcdb43fa63d063c0541701eebf5cb9d91ac949aacbd54f63fa874a0fa3e56e43b5e052157b689b7e9f6fb4f615d7b838225cf9d8ef3e355e42145c01d8bf1 WHIRLPOOL ea9b5d761311beee24f675e085ffe81f839517f2382f2ba424e577d70a1be03beec4b2188832dc069e801a288a6fa09e4da2efd6ab27f53afc395824b4dd390a
+MISC ChangeLog 31731 SHA256 dd78e31558d0cefa42f219c35d24d7c63af69d5f8457c97bfd835875f0ba3ed1 SHA512 06294e6df63d41b1c1d14fe9ef2fa636c71fa6953843fe411a7f0e4717efe956958b44f46b4628ccccc9379a837bc5b3dae8d34646646f892b4100164a87ad20 WHIRLPOOL de0e2b48672a19bf5451b9c51040acf44cdaff1fda827e815171beb7a2658ad141749b1edc53a2773b0c5f6c9b258111e7c73a1864383b2599f8d973841b12fe
 MISC metadata.xml 622 SHA256 42b6c75bd95fd3f6322e6a6f726a9e07d74f0b46376a6f17718f9043cf6cc225 SHA512 930faf03b0f8e73c0ddb1a9821c04d8e0b0eb49fbf1e70ba439cd810e7aac827490b2036fb9a4bf4d8f2d96b3a2e0c0b2923ed21ae17b08ca09464c7cee54997 WHIRLPOOL a604c6422e399f97c5d701d756eee871438b9bb7fb7195c5b4a35357be9e11b7709d7e77172d85f1e5f1d31987de958e8f0f29f13bd1106afab1bb32b75564e1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVPYLxAAoJEJOE+m71LUu65JcQAK++Me9jF5szkXSPNrHOfEi6
-w/E50aAW4kUO79ll+T/uRpEdWrYqvRQiHIR/5I4876KMOgHvJdgTUg9P409waHv8
-ZBNn6lEoe0T7Mv2Qmqy0eeodlrxo1gGX1F74/fPxEriiyqQn9cy3sBaD3yT6naek
-FoPSSlH3+fJ4auXhrEZtLvU6xuIYcBK73cvOqh3iaUL/wk1NtGKWrKRUpSF4PGFZ
-IuPtOVQOxPtjFRv6SpN57IeJHthh3SjRlFSnPKSYcrIbLgJTvQq61LumN/J5kbpv
-UfdNlSUUEPVGLS2yDULxfLqN2kRkfFdEvdlv6RRRQxpfxeqxzwzZT1104hsDNtU2
-Za08KWz5PC2qOKwIFhHHCLWnAX9KCoqlU0pI/kmBLmK5rQmOgkkBMrAujunWUQyg
-NO0UJr6dEBi+MzaZ4T+qF/TV7LYlvzflnfxEKW0oTt8hfhT3MyQjvmQRNLDW/GoW
-GsNcXnX3PFIbK8V6CHPX5jMCBOnjDySrhvgACK1f2NKxGAzYPX0TEcUxfPFK8IjB
-t9kKuynyydUXc/gHkIpqdABbEmGAsjAXFNmKCBeHTeraManZpB9Aau5uvW7ISCxJ
-0DWZa7J9llENWJErmL3GddSuWnvr6j4/XKvQqNIt95sDws8MrUtcc2cK9st7KOUl
-1uH07TZfkX9S4Lvf0YRb
-=vvM6
+iQIcBAEBCAAGBQJVPaRWAAoJEJOE+m71LUu6sIYQAJMvGXX2pY548PhPVSqtpyul
+GNd4RUu0+6WccWlhkqYaYqP5H1VoFHEkyMGQoebtJlF1QVbwv+OzndNRDRjt2xeM
+GvX5QgcNjvlaQMEqkJi2PkKnNEttwQAuSVsYxLgO2B6swNSdkk7Ri+z0uIEo+I5C
+BGKMZ+476DjDhdxgozp8zHr1NIRIZZV1H0OjSLFaEk9Aoiv8xMmb1itBRgsFxAqM
+RVXMJSYXPmEo/e9A24dv6CggQF5XHNexKenWCGZweCGnyMIn24N+yQ3RsfzdFeKK
+kfOXe1EU5ZFvvT1MqbTczcmswh/eXrFHNhOvki1ia1jXglHd5aY1s5q2zsff7k36
+Ag8Q6yAqM++7pXguoLWqbyH6lbYaNw8KfYq1sR71fJbGQwr4kZvVqXd9E5iL5u4b
+UyOyg9ZsTjA4U+wweqlhHPjXs+99leC6NGZfg46gaaThWEWn6Tl2Gee83SpNalVL
+Ot37yjA2PIJZ36PA3MBuOUnB+b+mK5Shm+tPKyI6I4bcjJ9DgUV+j4958zpHQ3BP
+SCL80GLm0LP6X+IC1EFPV0ymFyWJxiPNPLCg8wBxwv9EQQds6UX9M4dOFYeL7pW8
+9+JLtKq9D4S87FEydsswVlPmmNtgdTYbm7nIKg5231/oD0gQJUfVFKqR/frkg1Tf
+hPtlsmCgTQwPl5AEffmE
+=ip6x
 -----END PGP SIGNATURE-----
